# inky-frame-web

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml  settings.toml
.github/workflows/: black.yml  codeql.yml  flake8.yml  mypy.yml
inkyframeweb/: __init__.py  __main__.py  config.py  graphics.py  outputs.py  slideshow.py
micropython/: config.py  main.py  secrets.example.py
